# aiden

./: .editorconfig  .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
src/: App.vue
src-tauri/: Cargo.toml  rust-toolchain.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/embedding_files_test/: chinses.txt  embedding_content_99996.txt  embedding_content_99998.txt  embedding_content_99999.txt
src-tauri/examples/: model_flate.rs  sentence_transformers.rs
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/embed/: job.rs  mod.rs  statistical.rs  text_loader.rs
src-tauri/src/extract/: docx.rs  lopdf.rs  mod.rs
src-tauri/src/models/: bert.rs  flate.rs  mod.rs  transformers.rs
src-tauri/src/storage/: file_contents.rs  files.rs  mod.rs  open_ai.rs
src/layout/: MainLayout.vue
src/router/: index.ts
src/views/: AIConfigView.vue  ChatView.vue  ConfigView.vue
