[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "json", ] }
embed_anything = "0.4"
candle = { version = "0.8", package = "candle-core" }
candle-transformers = "0.8"
candle-nn = "0.8"
anyhow = "1"
md5 = "0.7"
flume = "0.11"
flate2 = "1.0"
tokenizers = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
tokio = { version = "1.42", features = ["full", ] }
lancedb = { version = "0.14" }
arrow-array = "53.0"
arrow-schema = "53.0"
futures = "0.3"
tempfile = "3.14"
arrow = { version = "53.2", optional = false }
log = "0.4"
tauri = { version = "2.1.0", features = [ "tray-icon", "image-png" ] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.2.0"
chrono = "0.4"
